--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "telemetry-service",
   "version": "1.10.0",
   "main": "app.js",
-  "author": "sunbird",
+  "author": "forwater",
   "scripts": {
     "test": "nyc --reporter=html --reporter=text --reporter=lcov ./node_modules/mocha/bin/mocha 'test/**/*.js'  --reporter mochawesome --exit",
     "test-with-coverage": "nyc --reporter=html --reporter=text --reporter=lcov ./node_modules/mocha/bin/mocha 'test/**/*.js'  --reporter mochawesome --exit && cat ./coverage/lcov.info | codacy-coverage"
